syntax = "proto3";

package ecommerce; //what a name

option go_package = "github.com/Egot3/microservicesTest/apiContracts";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    int32 stock = 5;
}

message GetProductRequest {
    string product_id = 1;
}

message GetProductResponse {
    Product product = 1;
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    float price = 3;
    int32 stock = 4;
}

message CreateProductResponse {
    string product_id = 1;
}

message HealthCheckResponse {
    bool alive = 1;
    google.protobuf.Timestamp checked_at = 2;
}

service ProductService {
    rpc GetProduct(GetProductRequest) returns (GetProductResponse);
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
    rpc HealthCheck(google.protobuf.Empty) returns (HealthCheckResponse);
}
